--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,8 @@ header {
     justify-content: space-between;
     align-items: center;
     margin: 20px 10vw;
+    z-index: 1;
+    position: relative;
 }
 
 
